--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,3 +30,4 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
