--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion '23.0.2'
     defaultConfig {
-        applicationId "id.sch.smktelkom_mlg.learn.login"
+        applicationId "xiirpl508182838.project.smktelkom_mlg.sch.id"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.android.support:support-v4:23.2.1'
 
 }
