--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion '23.0.2'
     defaultConfig {
-        applicationId "id.sch.smktelkom_mlg.learn.login"
+        applicationId "xiirpl508182838.project.smktelkom_mlg.sch.id"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
